mdds 0.11.0

* sorted_string_map (new)

  * new data structure to support efficient mapping of textural keys
    to numeric values when the key values are known at compile time.

* multi_type_vector

  * fixed a bug in transfer() where two adjacent blocks of identical
    type would fail to be merged in some circumstances.

mdds 0.10.3

* multi_type_vector

  * added 2 variants of release_range() that take start and end positions,
    to allow releasing of elements in specified interval.  One of the
    variants takes iterator as a block position hint.

    * iterator release_range(size_type start_pos, size_type end_pos)

    * iterator release_range(const iterator& pos_hint, size_type start_pos, size_type end_pos)

  * added push_back() and push_back_empty(), to allow efficient way to
    append new values to the end of the container.

    * template<typename _T>
      iterator push_back(const _T& value)

    * iterator push_back_empty()

mdds 0.10.2

* multi_type_vector

  * fixed a bug in transfer() that would trigger an assertion and
    eventually lead to a crash.  The problem occurred when a range of
    data to be transferred spanned over 2 blocks and consisted of the
    lower part of an upper block and the upper part of a lower block.

mdds 0.10.1

* multi_type_matrix

  * added a variant of set_empty() that takes an additional length
    parameter.

    * void set_empty(size_type row, size_type col, size_type length)

mdds 0.10.0

* flat_segment_tree

  * significant performance improvement on build_tree() and
    search_tree(), by optimizing the non-leaf node object generation
    and storage to achieve better locality of reference.

* segment_tree

  * slight performance improvement on build_tree(), as a result of the
    optimization done for flat_segment_tree since these two structures
    share the same tree generation code.

* multi_type_vector

  * improved debug message on mis-matched block types (only when